--- a/dress.css
+++ b/dress.css
@@ -1087,7 +1087,7 @@ position: relative;
     }
 }
 
-@media screen and (min-width: 768px) and (min-width: 1024px){
+@media screen and (min-width: 768px) and (max-width: 1024px){
      
     .quick_content{
         font-size: 12px;
