--- a/dress.css
+++ b/dress.css
@@ -448,10 +448,10 @@ img{
     padding: 100px 0px;
    
 }
-.winter_content{
+/* .winter_content{
      border: 1px solid green;
   
-}
+} */
 
 
 .winter_para{
