--- a/dress.css
+++ b/dress.css
@@ -13,13 +13,36 @@ img{
     border: 1px solid red;
 } */
 
+.fancy{
+    /* border: px solid red; */
+            /* display: flex; */
+            justify-content: center;
+            align-items: center;
+            background-color: rgb(248, 246, 246);
+            color: rgb(11, 11, 11);
+            padding: 10px 0px;
+            position: relative;
+           
+}
 .kaira{
-    border: px solid red;
+    /* border: px solid red; */
+   
     display: flex;
-    justify-content: center;
-    gap: 17%;
+    justify-content: space-around;
+    gap: 190px;
+  
     
 }
+
+.navmenus {
+            display: flex;
+            gap: 50px;
+        }
+
+.menubar,
+        #check {
+            display: none;
+        }       
 /* .kaira_content{
       border: px solid red;
       
@@ -48,24 +71,46 @@ img{
 
 
 
-@media screen and (max-width:768px){
+@media screen and (max-width: 768px){
     .options{
         display: none;
     }
     .like{
         display: none;
     }
+
+     .menubar{
+                display: block;
+                padding-top: 25px;
+            }
+    .navmenus{
+                display: none;
+                position: absolute;
+                color: black;
+                left: 0;
+                width: 30%;
+             
+                top: 60px;
+                background-color: rgb(253, 251, 251);
+            }
+    #check:checked ~.navmenus{
+                display: block;
+            }
+            .Purchase{
+                display: none;
+            }
+
+   .kaira{
+    display: flex;
+    justify-content: space-around;
+   }
+   
 }
 
-@media screen and (min-width:768px) and (max-width: 1024px){
-    .kaira{
-        
-    }
-    
-    .options{
-        font-size: 15px;
-        gap: 10px;
-    }
+@media screen and (min-width: 768px) and (max-width: 1024px){
+      .navmenus{
+                display: none;
+            }
 }
 
 
