--- a/dress.css
+++ b/dress.css
@@ -14,8 +14,9 @@ img{
 } */
 
 .fancy{
-    /* border: px solid red; */
+    /* border: 1px solid red; */
             /* display: flex; */
+           
             justify-content: center;
             align-items: center;
             background-color: rgb(248, 246, 246);
